feat: add Discord OAuth integration
- Implement Discord OAuth login functionality, allowing users to authenticate via their Discord accounts.
- Add new API endpoints for Discord OAuth configuration and token exchange.
- Update database schema to store Discord-related user information.
- Enhance frontend with a button for Discord login and handle OAuth callback.
- Introduce a proxy for calling Discord APIs from the client.
- Update documentation to reflect new features and setup instructions.

--- a/discord-app/index.html
+++ b/discord-app/index.html
@@ -44,6 +44,10 @@
                         autocomplete="current-password" required />
                 </div>
                 <button type="submit" class="btn-primary" id="auth-submit">Se connecter</button>
+                <div class="auth-separator" role="separator" aria-hidden="true">
+                    <span>ou</span>
+                </div>
+                <button type="button" class="btn-discord" id="auth-discord-btn">Utiliser Discord</button>
                 <p id="auth-error" class="error-text"></p>
             </form>
         </div>
@@ -1116,6 +1120,7 @@
     <script src="src/video.js"></script>
     <script src="src/voice.js"></script>
     <script src="src/context.js"></script>
+    <script src="src/discord.js"></script>
     <script src="src/main.js"></script>
 </body>
 
